# knowledge-cutoff

./: .gitignore  README.md  hf_dataset_card.md  models.yaml  pyproject.toml  report_template.html
data/: controls.jsonl  events.jsonl  events.sample.jsonl
docs/: index.html
kc/: __init__.py  cli.py  grade.py  prompts.py  providers.py  run.py  schema.py  score.py
scripts/: assemble.py  build_hf.py  build_page.py  export_viz.py  run_all.sh  run_direct.sh  run_frontier.sh  run_gempro.sh  run_gpt5x.sh  run_oss.sh
