[project]
name = "knowledge-cutoff"
version = "0.1.0"
description = "A benchmark to estimate the effective knowledge cutoff of language models."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116",
    "openai>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.scripts]
kc = "kc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kc"]
